Issue #439: Adjusted css of tags so they stay behind the menu bar on scrolling.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -297,7 +297,8 @@ body {
     height:24px;
     line-height:24px;
     position:relative;
-        
+    z-index: 0 !important;
+    opacity: .99;
     margin-left:20px;
     margin-top: 5px;
     margin-bottom: 5px;
